--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 /* Page */
 body {
   height: 100vh;
-  background: #d7cace;
+  background: #93707b;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,12 +21,8 @@ body {
 }
 
 #envelope {
-  width: 460px;
-  transition: transform 0.3s ease;
-}
-
-#envelope-container:hover #envelope {
-  transform: scale(1.08);
+  width: 260px;
+  border-radius: 12px;
 }
 
 #envelope-container p {
@@ -49,13 +45,13 @@ body {
 
 /* Letter window */
 .letter-window {
-  background: rgb(188, 141, 141);
+  background: white;
   padding: 25px;
   border-radius: 16px;
   width: 360px;
   text-align: center;
   transform: scale(0.8);
-  transition: transform 0.3s ease;
+  transition: transform 0.4s ease;
 }
 
 .letter-window.open {
@@ -72,10 +68,11 @@ body {
   margin-bottom: 10px;
 }
 
-/* Cat */
+/* Cat video */
 #letter-cat {
-  width: 280px;
+  width: 200px;
   margin: 15px 0;
+  border-radius: 12px;
 }
 
 /* Buttons */
@@ -89,19 +86,19 @@ body {
 .btn {
   width: 130px;
   cursor: pointer;
-  transition: transform 0.3s ease;
+  transition: transform 0.2s ease;
 }
 
 .btn:hover {
   transform: scale(1.1);
 }
 
-/* Final text */
+/* Final message */
 #final-text {
   display: none;
   font-size: 18px;
   color: #ff4d6d;
   margin-top: 15px;
-  font-family: 'Poppins', sans-serif;
 }
+
 
