--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 #envelope {
-  width: 400px;
+  width: 260px;
   transition: transform 0.3s ease;
 }
 
@@ -36,23 +36,25 @@ body {
   color: #ff4d6d;
 }
 
-/* Letter screen */
+/* Letter Screen */
 #letter-container {
   display: none;
   position: fixed;
   inset: 0;
   background: #ee9eb7;
   z-index: 9999;
+  display: flex;
   align-items: center;
   justify-content: center;
 }
 
-/* Letter window */
+/* Letter Window */
 .letter-window {
   background: rgb(188, 141, 141);
   padding: 25px;
   border-radius: 16px;
-  width: 360px;
+  width: 90%;
+  max-width: 360px;
   text-align: center;
   transform: scale(0.8);
   transition: transform 0.3s ease;
@@ -72,9 +74,10 @@ body {
   margin-bottom: 10px;
 }
 
-/* Cat */
+/* Cat GIF */
 #letter-cat {
-  width: 280px;
+  width: 100%;
+  max-width: 280px;
   margin: 15px 0;
 }
 
@@ -87,7 +90,7 @@ body {
 }
 
 .btn {
-  width: 130px;
+  width: 120px;
   cursor: pointer;
   transition: transform 0.3s ease;
 }
@@ -96,11 +99,10 @@ body {
   transform: scale(1.1);
 }
 
-/* Final text */
+/* Final Text */
 #final-text {
   display: none;
   font-size: 18px;
   color: #ff4d6d;
   margin-top: 15px;
-  font-family: 'Poppins', sans-serif;
 }
