--- a/style.css
+++ b/style.css
@@ -38,12 +38,11 @@ body {
 
 /* Letter Screen */
 #letter-container {
-  display: none;
+  display: none; /* IMPORTANT */
   position: fixed;
   inset: 0;
   background: #ee9eb7;
   z-index: 9999;
-  display: flex;
   align-items: center;
   justify-content: center;
 }
@@ -74,7 +73,7 @@ body {
   margin-bottom: 10px;
 }
 
-/* Cat GIF */
+/* GIF */
 #letter-cat {
   width: 100%;
   max-width: 280px;
